# Heroes_

./: .gitignore  CMakeLists.txt  Hero.h  Mage.h  MageWeapon.h  Print.h  README.md  Warrior.h  Weapon.h  main.cpp
Heroes/: Hero.h  Mage.h  Warrior.h
Heroes/HeroesFactory/: HeroFactory.h  MageFactory.h  WarriorFactory.h
Weapons/: UniversalWeapon.h  WarriorWeapon.h  Weapon.h
